# codex-app-transfer

./: .dockerignore  .gitignore  .mailmap  ACKNOWLEDGEMENTS.md  ARCHITECTURE_PROTOCOL_GUIDE.md  CHANGELOG.md  Cargo.toml  README.en.md  README.md  installer.nsi  main.py  messages-responses-protocol-task-tree.md  v1.0.3-gap-task-plan.md
.github/: dependabot.yml
.github/workflows/: _reusable-cf-canary.yml  cf-canary-on-deps.yml  ci.yml  code-graph.yml  release.yml  weekly-cf-check.yml
agent/: issues.md
backend/: config.py  main.py  proxy.py
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  openai_chat.rs  passthrough.rs  registry.rs  types.rs
crates/adapters/src/anthropic_messages/: request.rs  response.rs
crates/adapters/src/core/: apply_patch_trace.rs  failure_stream.rs  mod.rs
crates/adapters/src/gemini_cli/: mod.rs
crates/adapters/src/gemini_native/: grounding.rs  mod.rs  request.rs  response.rs  types.rs
crates/adapters/src/grok_web/: parent_response.rs  request.rs  response.rs
crates/adapters/src/mapper/: anthropic_messages.rs  chat.rs  cloud_code.rs  gemini_native.rs  grok_web.rs  mod.rs  responses.rs
crates/adapters/src/responses/: apply_patch_preflight.rs  artifact_store.rs  blob_store.rs  compact.rs  context_breakdown.rs  converter.rs  mod.rs  passthrough_observe.rs  request.rs  session.rs  stream.rs  tool_call_cache.rs  tool_call_repair.rs
crates/adapters/src/responses/request/: tests.rs  tools.rs
crates/adapters/tests/: anthropic_messages_request.rs  anthropic_messages_response.rs  responses_streaming.rs
crates/codex_integration/: Cargo.toml
crates/codex_integration/src/: apply.rs  electron_state.rs  lib.rs  model_catalog.rs  paths.rs  residual.rs  snapshot.rs
crates/conversation_export/: Cargo.toml
crates/conversation_export/src/: lib.rs  list.rs  repair.rs  trash_ops.rs
crates/gemini_oauth/examples/: zai_login.rs
crates/gemini_oauth/src/: lib.rs
crates/gemini_oauth/static_data/: antigravity_models.json
crates/gemini_oauth/tests/: zai_login_e2e.rs
crates/http/: Cargo.toml
crates/http/src/: fetch.rs  impersonating.rs  lib.rs  search.rs
crates/http/src/headless/: mod.rs
crates/http/tests/: cf_bypass.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: diagnostics.rs  fake_account.rs  forward.rs  lib.rs  resolver.rs  server.rs  telemetry.rs  trace_store.rs  validation.rs  ws_passthrough.rs
crates/proxy/tests/: auth_and_routing.rs  forward_trace.rs  responses_observe_e2e.rs  streaming_passthrough.rs
crates/registry/src/: base_instructions.rs  compact_thinking_policy.rs  healing.rs  lib.rs  model_context_policy.rs  presets.rs  presets_data.json  reasoning_effort_policy.rs  reasoning_tiers.rs  schema.rs
crates/usage_tracker/src/: lib.rs
docs/: CHANGELOG.md  build.md  cleanup-plan.md  codex-plugin-unlock-analysis.md  codex-plugin-unlock-implementation.md  codex-plugin-unlock-integration-plan.md  commit-rewrite-map-2026-05-13.md  followup-tracker.md  gemini-native-path-research.md  protocol-conversion-3way-comparison.md  protocol-unification-rfc-phase5-anthropic-messages.md  release-notes-v1.0.1.md  release-notes-v1.0.2.md  release-notes-v1.0.3.md  release-notes-v2.0.2.md  release-notes-v2.0.4.md  release-notes-v2.0.5.md
docs/archive/: v1.0.3-gap-task-plan.md
docs/contrib/: reply-templates.md
docs/followup/: 27-codex-desktop-double-splash-on-plugin-unlock.md  28-account-restore-desktop-clear-no-snapshot-guard.md  29-account-restore-cleanup-all-destructive.md  30-account-restore-single-storage-no-redundancy.md  31-account-restore-cross-version-managed-keys.md  33-windows-plugin-unlock-msix-store.md  38-codex-macos-seatbelt-network-access-bug.md  42-lark-mcp-token-footprint-instrumentation.md  44-compact-strip-history-reasoning-content.md
docs/investigation/: codex-0.128-model-catalog-compat.md  kimi-reasoning-truncation.md
docs/plans/: 2026-05-13-messages-responses-protocol.md
docs/refactor/: admin-handlers.md  cleanup.md  migration.md  v2.0.7-vs-python-gap-scan.md
docs/release-notes/: v1.0.0.md  v2.0.0.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.0.5.md  v2.0.6.md  v2.0.7.md  v2.0.8.md
frontend/: index.html
frontend/css/components/: header.css  usage.css
frontend/css/pages/: providers.css
frontend/js/: api.js  app.js  i18n.js
frontend/src/: App.vue
frontend/src/api/: codex.ts  desktop.ts  marketplace.ts  oauth.ts  providers.ts  system.ts  types.ts
frontend/src/composables/: useSessionImport.ts
frontend/src/i18n/: en.ts  zh.ts
frontend/src/layout/: AppLayout.vue
frontend/src/pages/: CodexSkinPage.vue  ProxyPage.vue  SettingsPage.vue
release-notes/: v2.0.1.md  v2.0.10.md  v2.0.11.md  v2.0.9.md  v2.1.0.md  v2.1.1.md  v2.1.10.md  v2.1.11.md  v2.1.12.md  v2.1.16.md  v2.1.17.md  v2.1.2.md  v2.1.3.md  v2.1.4.md  v2.1.5.md  v2.1.6.md  v2.1.9.md  v2.3.2.md  v2.3.3.md  v2.4.0.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/resources/: trace_viewer.html
src-tauri/src/: codex_plugin_unlocker.rs  codex_quota_injector.rs  codex_real_account.rs  codex_theme_injector.rs  glm_quota.rs  kimi_code_quota.rs  kimi_session.rs  macos_dock.rs  main.rs  mcp_webfetch_server.rs  mimo_quota.rs  mimo_session.rs  opencode_go_quota.rs  opencode_session.rs  provider_quota.rs  proxy_runner.rs  trace_viewer.rs  web_session_quota.rs
src-tauri/src/admin/: handlers.rs  mod.rs  registry_io.rs  state.rs
src-tauri/src/admin/handlers/: _legacy.rs  agents_md.rs  chrome.rs  codex_sessions.rs  common.rs  conversations.rs  desktop.rs  feedback.rs  gemini_oauth.rs  marketplace_connectors.rs  mcp.rs  memories_md.rs  mod.rs  plugin_unlock.rs  plugin_unlock_mode.rs  proxy.rs  real_account.rs  settings.rs  theme.rs  trace_viewer.rs  update.rs  usage.rs
src-tauri/src/admin/handlers/providers/: crud.rs  mod.rs  models.rs  presets.rs  test.rs
src-tauri/src/admin/services/: agents_md_paths.rs  codex_plugins.rs  mcp_servers.rs  mod.rs
src-tauri/src/admin/services/desktop/: mod.rs  process.rs  snapshot.rs
xtask/: Cargo.toml
xtask/src/: gen_fixtures.rs  main.rs  release_bundle.rs
(+20 files in other folders)
