[package]
name = "codex-app-transfer"
version = "2.1.17"
description = "Codex App Transfer - Tauri 2 shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# 二进制入口
[[bin]]
name = "codex-app-transfer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codex-app-transfer-registry = { path = "../crates/registry" }
codex-app-transfer-codex-integration = { path = "../crates/codex_integration" }
codex-app-transfer-conversation-export = { path = "../crates/conversation_export" }
codex-app-transfer-usage-tracker = { path = "../crates/usage_tracker" }
codex-app-transfer-proxy = { path = "../crates/proxy" }
codex-app-transfer-adapters = { path = "../crates/adapters" }
codex-app-transfer-gemini-oauth = { path = "../crates/gemini_oauth" }
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
axum = { version = "0.8", features = ["http1", "tokio", "macros"] }
base64 = "0.22"
# Theme 自定义背景(#264):decode 用户上传图 → 中心 crop 方形 → resize → encode JPEG。
# default-features = false 关掉 GIF/WebP/ICO/PNM 等少用格式只保 JPG/PNG,减体积。
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
getrandom = "0.2"
# 以下 5 项为 cas:// scheme 静态文件路由的跨平台依赖,
# 之前误放在 [target.macos] 块下导致 Linux/Windows cargo check 失败。
tower = "0.5"
bytes = "1"
include_dir = "0.7"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2", "socks", "system-proxy", "gzip"] }
# sha2 "oid" feature 让 `Pkcs1v15Sign::new::<Sha256>()` 编译过 (admin/signature.rs
# 客户端验签需要 OID-tagged Sha256, 跟 xtask/Cargo.toml 设置对齐避免 cross-impl drift)。
sha2 = { version = "0.10", features = ["oid"] }
# RSA-3072 PKCS1-v15-SHA256 客户端验签 (update.rs:fetch_latest_json + download_asset_impl
# 双侧 verify 通过 admin::signature::verify_signed_bytes)。算法跟 xtask/release_bundle.rs
# 对称: xtask sign side / src-tauri verify side 同 crate 同版本, 防 cross-impl drift。
rsa = { version = "0.9", features = ["sha2", "pem"] }
# toml_edit 保留注释 / 字段顺序 / 空行,用于 #24 MCP tab 的 config.toml 受管块
# (TomlManagedBlock variant 解析 [mcp_servers.<name>] table 时不能丢用户注释)。
# 普通 `toml` crate from_str + to_string 会丢注释 → marker 注释失效, 不可用。
toml_edit = "0.22"
# tar / gzip — MCP plugin marketplace 安装走 tar.gz download → 解压到 ~/.codex/plugins/cache/
tar = "0.4"
flate2 = "1.0"
# cross-process file locking — config.json RMW 跨实例(双开 .app)防 lost-update。
# 进程内 std::sync::Mutex 不管多 OS 进程,fs2::FileExt::lock_exclusive 走 fcntl
# (POSIX) / LockFileEx (Windows),OS 级独占。
fs2 = "0.4"
# CDP WebSocket 连接（Codex Plugins 解锁器）
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# futures 用于 WebSocket Stream/Sink 的 split 操作
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSRunningApplication"] }

# Windows MSIX Codex Desktop 启动 — IApplicationActivationManager COM 调用
# 让 packaged Codex.exe 接收 `--remote-debugging-port=9222` 启动参数,
# 绕过 explorer.exe shell:AppsFolder 协议剥 args 的限制。
# 借鉴 BigPizzaV3/CodexPlusPlus `codex_session_delete/launcher.py:347-395`,
# 用 windows-rs 官方 binding 而非手搓 ctypes COM,稳定性更好。
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[features]
# 默认空,自定义 protocol 在打包时启用
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
