[package]
name = "codex-app-transfer"
version = "2.3.0"
description = "Codex App Transfer - Tauri 2 shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# cargo-machete 误报白名单 —— 仅 tauri-build 是工具静态分析的已知误报(不是真未使用):
#   build.rs:28 实际调用 tauri_build::build(),但 machete 不扫 build.rs。
# 其余 machete 报告均为真阳性,随 PR 清理。详见 #343。
[package.metadata.cargo-machete]
ignored = ["tauri-build"]

# 二进制入口
[[bin]]
name = "codex-app-transfer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codex-app-transfer-registry = { path = "../crates/registry" }
codex-app-transfer-codex-integration = { path = "../crates/codex_integration" }
codex-app-transfer-conversation-export = { path = "../crates/conversation_export" }
codex-app-transfer-usage-tracker = { path = "../crates/usage_tracker" }
codex-app-transfer-proxy = { path = "../crates/proxy" }
codex-app-transfer-adapters = { path = "../crates/adapters" }
codex-app-transfer-gemini-oauth = { path = "../crates/gemini_oauth" }
codex-app-transfer-http = { path = "../crates/http" }
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
axum = { version = "0.8", features = ["http1", "tokio", "macros"] }
base64 = "0.22"
# Theme 自定义背景(#264):decode 用户上传图 → 中心 crop 方形 → resize → encode JPEG。
# default-features = false 关掉 GIF/WebP/ICO/PNM 等少用格式只保 JPG/PNG,减体积。
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
getrandom = "0.2"
# 以下 5 项为 cas:// scheme 静态文件路由的跨平台依赖,
# 之前误放在 [target.macos] 块下导致 Linux/Windows cargo check 失败。
tower = "0.5"
bytes = "1"
include_dir = "0.7"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2", "socks", "system-proxy", "gzip"] }
# sha2 "oid" feature 让 `Pkcs1v15Sign::new::<Sha256>()` 编译过 (admin/signature.rs
# 客户端验签需要 OID-tagged Sha256, 跟 xtask/Cargo.toml 设置对齐避免 cross-impl drift)。
sha2 = { version = "0.10", features = ["oid"] }
# RSA-3072 PKCS1-v15-SHA256 客户端验签 (update.rs:fetch_latest_json + download_asset_impl
# 双侧 verify 通过 admin::signature::verify_signed_bytes)。算法跟 xtask/release_bundle.rs
# 对称: xtask sign side / src-tauri verify side 同 crate 同版本, 防 cross-impl drift。
rsa = { version = "0.9", features = ["sha2", "pem"] }
# toml_edit 保留注释 / 字段顺序 / 空行,用于 #24 MCP tab 的 config.toml 受管块
# (TomlManagedBlock variant 解析 [mcp_servers.<name>] table 时不能丢用户注释)。
# 普通 `toml` crate from_str + to_string 会丢注释 → marker 注释失效, 不可用。
toml_edit = "0.22"
# tar / gzip — MCP plugin marketplace 安装走 tar.gz download → 解压到 ~/.codex/plugins/cache/
tar = "0.4"
flate2 = "1.0"
# cross-process file locking — config.json RMW 跨实例(双开 .app)防 lost-update;
# [MOC-196] 也是 macOS 单实例锁本体(single_instance.rs,进程死亡内核自动释放)。
# 进程内 std::sync::Mutex 不管多 OS 进程,fs2 在 unix 走 flock(非 fcntl,
# fs2-0.4.3/src/unix.rs)/ Windows 走 LockFileEx,OS 级独占。
fs2 = "0.4"
# CDP WebSocket 连接（Codex Plugins 解锁器）
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# futures 用于 WebSocket Stream/Sink 的 split 操作
futures = "0.3"
# 诊断流量查看器(MOC-169)SSE:把 trace_store 的 broadcast::Receiver 适配成 axum Sse Stream
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
# objc2 / objc2-foundation 不直接声明:代码只 use objc2_app_kit,这俩作为
# objc2-app-kit 的传递依赖自动可用,显式列为直接依赖是冗余(cargo-machete 真阳性)。
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSRunningApplication"] }

# Windows MSIX Codex Desktop 启动 — IApplicationActivationManager COM 调用
# 让 packaged Codex.exe 接收 `--remote-debugging-port=9222` 启动参数,
# 绕过 explorer.exe shell:AppsFolder 协议剥 args 的限制。
# 借鉴 BigPizzaV3/CodexPlusPlus `codex_session_delete/launcher.py:347-395`,
# 用 windows-rs 官方 binding 而非手搓 ctypes COM,稳定性更好。
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    # MOC-94:原生进程枚举(替 spawn tasklist)判断 Codex 是否在运行
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    # MOC-95:原生优雅关闭(PostMessage WM_CLOSE)替 PowerShell Get-CimInstance WMI
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
# 单测用临时目录(MOC-104 real-account 检测的备份扫描测试)。与 workspace 其它
# crate 一致用 tempfile 3,自动清理,不手搓 temp_dir + 唯一名。
tempfile = "3"

[features]
# 默认空,自定义 protocol 在打包时启用
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
