[package]
name = "codex-app-transfer-adapters"
version = "0.1.0"
description = "Provider 协议适配器(Stage 3 起)。把入站 OpenAI Chat / Responses API 与上游 provider 协议互转。"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codex-app-transfer-registry = { path = "../registry" }
# OAuth token store fallback —— GeminiCliAdapter 在 provider.extra.cloud_code_project_id
# 缺失时直接从 ~/.codex-app-transfer/gemini-oauth.json 读 project_id(token 文件
# 是 single source of truth,避免 sync_to_active_provider race 让 chat 路径全 fail)
codex-app-transfer-gemini-oauth = { path = "../gemini_oauth" }
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# rusqlite 用 bundled feature 自带 SQLite 静态库 — 避免依赖系统 libsqlite3
# (Windows / macOS / Linux 三平台一致),代价是编译产物 +~1.5MB,可接受。
rusqlite = { version = "0.40", features = ["bundled"] }
# tracing — namespace 展平 + warn_once_drop_tool 用 tracing::warn / debug 落日志,
# 跟 crates/proxy 同版本对齐(proxy/Cargo.toml:29 也是 0.1)。
tracing = "0.1"
# CSRF state token + UUID v4 for outer envelope user_prompt_id
getrandom = "0.2"
# grok_web 动态 statsig-id 生成(base64-encoded 伪 JS error blob;参考 chenyme/grok2api)
base64 = "0.22"
# MOC-142 sessions.db blob 外置:大 data: 图片按 sha256 内容寻址去重落盘
# (借鉴 Codex generated_images / Claude paste-cache),消除逐轮快照重复存储。
sha2 = "0.10"
hex = "0.4"
tiktoken-rs = "0.12.0"
# [MOC-232] 把 context breakdown 的 o200k 逐 item tokenize 搬离转发关键路径:adapter 内
# 用 Handle::try_current + spawn_blocking 起后台任务(只需 `rt`,不自建 runtime —
# proxy / src-tauri 提供 runtime)。dev-dependencies 另带 rt-multi-thread 供测试。
# [MOC-234] `sync`:responses 观测 tee 用 mpsc channel 把 SSE 解析整体移出流式热路径
# (poll_next 只 O(1) 入队,解析在 spawned task 异步消费 → 对流式输出零影响)。
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
indexmap = "2"
tempfile = "3"
# [MOC-195] 集成测试 main 前隔离 home(tests/common/mod.rs),版本跟 lock 内既有传递依赖一致
ctor = "0.8"
