[package]
name = "codex-app-transfer-codex-integration"
version = "0.1.0"
description = "Codex CLI 配置文件读写 + apply/restore + snapshot(Stage 2.5,原 backend/registry.py 中 ~/.codex/* 集成层的 Rust 端口)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# #258 best-effort 写入路径需要 user-visible warn 日志(经 telemetry_bridge
# 路由到 in-app logs)。eprintln! 在 .app 启动时无 stderr,被 launchd 吞。
tracing = "0.1"
codex-app-transfer-registry = { path = "../registry" }

[dev-dependencies]
tempfile = "3"
# #212 防回归:sync_table_field output 必须可被 toml crate 正常 parse,
# 守住 TOML spec 兼容性(避免 dotted-root + section-form 混用触发 duplicate)。
toml = "1.1"
