[package]
name = "codex-app-transfer-http"
version = "0.1.0"
description = "Workspace 统一 HTTP 客户端:为被 Cloudflare 强保的 OpenAI/ChatGPT 域提供浏览器 TLS 指纹伪装,其余域继续走标准 reqwest"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# 默认走标准 reqwest (跟 workspace 现状一致: rustls-tls + system-proxy + socks + http2 + stream)
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "socks", "system-proxy"] }
# 为 OpenAI/ChatGPT 等 Cloudflare 强保域提供浏览器指纹伪装。
# **必须 pin 死 rc 版本**:wreq/wreq-util 是 pre-release,caret 范围会解析到最新 rc,
# 而 wreq-util 3.0.0-rc.11 是写给 wreq 6.0.0-rc.23 的(rc.29 重命名了 emulation
# trait IntoEmulation/EmulationFactory → 编译 skew,#358 review 实证)。锁定经
# cargo build 验证可一起编译的组合。default-features=false 关掉了 wreq 的
# default。注: rc.23 的 runtime (TcpConnector/GaiResolver) 非 feature-gated,
# rc.23 features 列表里没有 tokio-rt 这一项 (#358 实证),无需也无法显式开启。
wreq = { version = "=6.0.0-rc.23", default-features = false, features = ["stream", "webpki-roots", "socks", "system-proxy"] }
wreq-util = "=3.0.0-rc.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "process"] }
# 错误类型
thiserror = "2"

# === MOC-143 ③ JS 渲染层: headless Chromium 抓 JS 渲染 SPA ===
# ①reqwest 静态 / ②wreq CF 指纹都只能拿初始 HTML; JS 渲染 SPA 的初始 HTML 是空骨架,
# 内容由 JS 运行时填充 → 用 headless Chromium (CDP) 真跑 JS 取渲染后 DOM。
# chromiumoxide: CDP 客户端 (纯 Rust, tokio 原生)。0.9.1 无 tokio-runtime feature
# (tokio 无条件依赖),caret "0.9" 锁 0.9.x。
chromiumoxide = "0.9"
# handler stream 必须 spawn 驱动 (StreamExt::next),否则 CDP 不前进。
futures = "0.3"
# 解压按需下载的 chrome-headless-shell zip (同步 API,在 spawn_blocking 里跑)。
zip = { version = "2", default-features = false, features = ["deflate"] }
# app data 目录: chrome-headless-shell 落 ~/.codex-app-transfer/browsers/ (跨平台 home_dir)。
dirs = "6"
htmd = "0.5"
# 正文抽取 (MOC-152, PR-B): readability.js 移植, 转 markdown 前剥 nav/页眉/页脚/侧栏/广告,
# 只留正文 article。底座 dom_query(html5ever 同族, 不引第二个 HTML 解析器), 自带
# TooManyElements 守卫防病态大页。
dom_smoothie = "0.17"

[dev-dependencies]
# 集成测试: 真实打到 chatgpt.com 验证能过 CF (网络可达时)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
