[package]
name = "codex-app-transfer-http"
version = "0.1.0"
description = "Workspace 统一 HTTP 客户端:为被 Cloudflare 强保的 OpenAI/ChatGPT 域提供浏览器 TLS 指纹伪装,其余域继续走标准 reqwest"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# 默认走标准 reqwest (跟 workspace 现状一致: rustls-tls + system-proxy + socks + http2 + stream)
# gzip/brotli/deflate/zstd: 解压 feature (MOC-190)。curl 档带 Chrome UA, 服务器对其返回压缩正文;
# 不开解压则 reqwest 原样吐 gzip 字节 → 乱码 (antigravity.google 实测 final_tier=Curl ratio=0.43)。
# feature 启用后 reqwest 默认自动加 Accept-Encoding + 解压。
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "socks", "system-proxy", "gzip", "brotli", "deflate", "zstd"] }
# 为 OpenAI/ChatGPT 等 Cloudflare 强保域提供浏览器指纹伪装。
# **必须 pin 死 rc 版本**:wreq/wreq-util 是 pre-release,caret 范围会解析到最新 rc,
# 而 wreq-util 3.0.0-rc.11 是写给 wreq 6.0.0-rc.23 的(rc.29 重命名了 emulation
# trait IntoEmulation/EmulationFactory → 编译 skew,#358 review 实证)。锁定经
# cargo build 验证可一起编译的组合。default-features=false 关掉了 wreq 的
# default。注: rc.23 的 runtime (TcpConnector/GaiResolver) 非 feature-gated,
# rc.23 features 列表里没有 tokio-rt 这一项 (#358 实证),无需也无法显式开启。
# gzip/brotli/deflate/zstd: 解压 feature (MOC-190)。wreq 的 Emulation::Chrome120 必带 Accept-Encoding
# 指纹, 服务器据此返回压缩正文; 不开解压则 client 原样吐压缩字节 → 乱码 (antigravity.google 实测)。
# 解压在 response 层 (tower-http), 不动 ClientHello / Accept-Encoding 指纹 —— 但改 wreq 仍跑 cf-canary 复核。
wreq = { version = "=6.0.0-rc.23", default-features = false, features = ["stream", "webpki-roots", "socks", "system-proxy", "gzip", "brotli", "deflate", "zstd"] }
wreq-util = "=3.0.0-rc.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "process"] }
# 错误类型
thiserror = "2"

# === MOC-143 ③ JS 渲染层: headless Chromium 抓 JS 渲染 SPA ===
# ①reqwest 静态 / ②wreq CF 指纹都只能拿初始 HTML; JS 渲染 SPA 的初始 HTML 是空骨架,
# 内容由 JS 运行时填充 → 用 headless Chromium (CDP) 真跑 JS 取渲染后 DOM。
# chromiumoxide: CDP 客户端 (纯 Rust, tokio 原生)。0.9.1 无 tokio-runtime feature
# (tokio 无条件依赖),caret "0.9" 锁 0.9.x。
chromiumoxide = "0.9"
# handler stream 必须 spawn 驱动 (StreamExt::next),否则 CDP 不前进。
futures = "0.3"
# 解压按需下载的 chrome-headless-shell zip (同步 API,在 spawn_blocking 里跑)。
zip = { version = "2", default-features = false, features = ["deflate"] }
# app data 目录: chrome-headless-shell 落 ~/.codex-app-transfer/browsers/ (跨平台 home_dir)。
dirs = "6"
htmd = "0.5"
# 正文抽取 (MOC-152, PR-B): readability.js 移植, 转 markdown 前剥 nav/页眉/页脚/侧栏/广告,
# 只留正文 article。底座 dom_query(html5ever 同族, 不引第二个 HTML 解析器), 自带
# TooManyElements 守卫防病态大页。
dom_smoothie = "0.18"
# web_search (MOC-12): DDG html SSR 搜索结果解析。dom_query 是 dom_smoothie 的底座
# (已在依赖树, 不引第二个 HTML 解析器), 用其 CSS selector 抽 .result__a/.result__snippet;
# urlencoding 编码 query + 解码 DDG uddg 重定向参数里的真实 URL。
dom_query = "0.28"
urlencoding = "2"
# Bing 后备引擎 (MOC-186 ⑤): 解 Bing `ck/a` 跳转链接里的 base64url `u` 参数拿真实落地 URL。
base64 = "0.22"
# locale-aware Accept-Language (MOC-186 ④): 跨平台读系统 locale (macOS CFLocale / Win / Linux),
# 比裸读 LANG env 可靠 (GUI app 的 LANG 常为空)。让中文用户抓地区站拿本地化内容。
sys-locale = "0.3"

[dev-dependencies]
# 集成测试: 真实打到 chatgpt.com 验证能过 CF (网络可达时)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
