[package]
name = "codex-app-transfer-proxy"
version = "0.1.0"
description = "HTTP/SSE forwarding proxy core (Stage 2 skeleton port of backend/proxy.py)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codex-app-transfer-registry = { path = "../registry" }
codex-app-transfer-adapters = { path = "../adapters" }
codex-app-transfer-gemini-oauth = { path = "../gemini_oauth" }
axum = { version = "0.8", features = ["http1", "http2", "tokio", "ws"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-core = "0.3"
futures-util = "0.3"
http = "1"
# rustls-tls 走纯 Rust TLS 栈,跨平台编译时不需要 system OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "socks", "system-proxy"] }
# [MOC-125] WS 透传专用 reqwest 0.13(reqwest-websocket 0.6 要 0.13),package rename 与上面
# state.http 的 reqwest 0.12 共存 —— 只远程控制 WS 这条新路径用,**不动 state.http**,故所有
# 现有上游转发的 CF/ClientHello 指纹零变化(升级范围 A)。0.13 feature 改名 rustls-tls→rustls,
# 且 0.13 的 rustls 不再自带根证书、需显式加 webpki-roots。
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "http2", "socks", "system-proxy"] }
reqwest-websocket = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
indexmap = "2"
tokio-tungstenite = "0.29"
tempfile = "3"
