[package]
name = "codex-app-transfer-proxy"
version = "0.1.0"
description = "HTTP/SSE forwarding proxy core (Stage 2 skeleton port of backend/proxy.py)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codex-app-transfer-registry = { path = "../registry" }
codex-app-transfer-adapters = { path = "../adapters" }
codex-app-transfer-gemini-oauth = { path = "../gemini_oauth" }
axum = { version = "0.8", features = ["http1", "http2", "tokio", "ws"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-core = "0.3"
futures-util = "0.3"
http = "1"
# rustls-tls 走纯 Rust TLS 栈,跨平台编译时不需要 system OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "socks", "system-proxy"] }
# [MOC-125] WS 透传专用 reqwest 0.13(reqwest-websocket 0.6 要 0.13),package rename 与上面
# state.http 的 reqwest 0.12 共存 —— 只远程控制 WS 这条新路径用,**不动 state.http**,故所有
# 现有上游转发的 CF/ClientHello 指纹零变化(升级范围 A)。0.13 feature 改名 rustls-tls→rustls,
# 且 0.13 的 rustls 不再自带根证书、需显式加 webpki-roots。
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "http2", "socks", "system-proxy"] }
reqwest-websocket = "0.6"
# [MOC-234] responses provider 上游 WS relay 用 tokio-tungstenite(Codex 同款 WS 栈):用其 WS 帧
# 编解码运行时(`WebSocketStream::from_raw_socket` 在已建立的 TLS 流上收发帧)+ 消息类型,连接 /
# TLS / 握手全自管(TLS 走 tokio-rustls,见 ws_passthrough.rs),不用 tokio-tungstenite 自带 TLS,
# 故无需 TLS feature。remote-control 仍用 reqwest-websocket。[followup MOC-239] 该 relay 默认禁用
# (上游 ALB WS 实证不可达),保留待验证。
tokio-tungstenite = "0.29"
# [MOC-234] 经 VPN 代理建上游 WS 隧道走 SOCKS5(proxy 端解析域名,绕开客户端 fake-ip)。
tokio-socks = "0.5"
# [MOC-234] rustls 0.23 进程级 CryptoProvider:依赖树有多个 backend 候选时无法自动选,做 TLS
# (tokio-rustls)前必须显式装 aws-lc-rs(与 reqwest 上游转发一致),否则 panic。
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time", "io-util"] }
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
indexmap = "2"
tokio-tungstenite = "0.29"
tempfile = "3"
# [MOC-195] 集成测试 main 前隔离 home(tests/common/mod.rs),版本跟 lock 内既有传递依赖一致
ctor = "0.8"
